integer init