@@ -135,9 +135,9 @@ public class ImgUtil {
             Image itemp = bi.getScaledInstance(width, height, BufferedImage.SCALE_SMOOTH); 
             // 计算比例 
             if (bi.getHeight() > bi.getWidth()) {
-                ratio = (new Integer(height)).doubleValue() / bi.getHeight(); 
+                ratio = (Integer.valueOf(height)).doubleValue() / bi.getHeight(); 
             } else {
-                ratio = (new Integer(width)).doubleValue() / bi.getWidth(); 
+                ratio = (Integer.valueOfwidth)).doubleValue() / bi.getWidth(); 
             } 
             AffineTransformOp op = new AffineTransformOp(AffineTransform .getScaleInstance(ratio, ratio), null); 
             itemp = op.filter(bi, null); 
